--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "sass": "^1.64.1"
   },
   "dependencies": {
+    "alpinejs": "^3.15.4",
     "gsap": "^3.13.0",
-    "locomotive-scroll": "^4.1.4"
+    "locomotive-scroll": "^4.1.4",
+    "lucide": "^0.562.0"
   }
 }
